--- a/templates/base.html
+++ b/templates/base.html
@@ -107,11 +107,9 @@
     {% block content %}
     {% endblock %}
 
-    <script
-    src="https://code.jquery.com/jquery-3.2.1.js"
-    integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-    crossorigin="anonymous"></script>
-      <script src="{% static 'js/main_header_login_downbutton.js'%}"></script>
-      <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+    {% block script %}
+    {% endblock %}
   </body>
 </html>
