--- a/static/css/notice.css
+++ b/static/css/notice.css
@@ -1,8 +1,6 @@
 @import "notice_create.css";
 @import "notice_kinds.css";
 
-
-
 .top_box{
     display: flex;
     height: 6rem;
@@ -11,9 +9,15 @@
     margin-bottom: 2rem;
 }
   
-
 .top_box_title{
     font-size: 2.5rem;
     font-weight: bold;
     margin-right: 40rem;
 }
+.notice_section_box{
+    width: 110rem;
+}
+  
+.mid_box{
+    margin-top: 1rem;
+  }
