--- a/static/css/notice_create.css
+++ b/static/css/notice_create.css
@@ -1,100 +1,143 @@
-.mid_box_first_line{
-    display: flex;
-    }
-    .mid_box_front_box{
-      width: 200px;
-      height: 40px;
-      background-color: #B41515;
-      color: white;
-      font-size: 22px;
-      font-weight: bold;
-      text-align: center;
-      padding-top: 10px;
-      border-bottom: 2px solid white;
-    }
-    .mid_box_input_title{
-    width: 1150px;
-    height: 48px;
-    border-top: 2px solid #B41515;
-    border-bottom: 2px solid #B41515;
-    }
-    .mid_box_input_title_box{
-      width: 1060px;
-      height: 38px;
-      border: none;
-      outline: none;
-      padding-left: 45px;
-      font-size: 20px;
-      padding-top: 8px;
-    }
-    
-    .mid_box_second_line{
-      display: flex;
-    }
-    .mid_box_second_line_input{
-      width: 475px;
-      height: 48px;
-      border-bottom: 2px solid #B41515;
-    }
-    .mid_box_input_creater_box{
-      width: 385px;
-      height: 38px;
-      border: none;
-      outline: none;
-      padding-left: 45px;
-      font-size: 20px;
-      padding-top: 8px;
-    }
-    .mid_box_second_line_input_filebox label{
-      position: relative;
-      display: inline-block;
-      width: 80px;
-      height: 29px;
-      border: 1px solid #B41515;
-      border-radius: 10px;
-      background-color: #B41515;
-      color: white;
-      text-align: center;
-      padding-top: 5px;
-      margin-top: 7px;
-      margin-left: 10px; 
-      z-index: 10;
-    }
-    .mid_box_second_line_input_filebox input[type="file"]{
-      position: absolute;
-      top: 465px;
-      left: 1273px;
-      outline: none;
-      z-index: 1;
-    }
-    
-    .mid_box_textarea{
-      width: 1350px;
-      height: 450px;
-      border-bottom: 2px solid grey;
-    }
-    .mid_box_textarea_input{
-      width: 1300px;
-      height: 400px;
-      border: none;
-      outline: none;
-      padding: 25px;
-      font-size: 25px;
-      resize:none;
-    }
-    
-    .notice_create_upload{
-      width: 300px;
-      height: 57px;
-      border: none;
-      cursor: pointer;
-      margin-left: 1240px;
-      background-color: #B41515;
-      font-size: 35px;
-      font-weight: bold;
-      text-align: center;
-      color: white;
-      margin-left: 480px;
-      border-radius: 34px;
-      padding-top: 8px;
-    }
+.mid_box_create-first_line{
+  display: flex;
+  position: relative;
+}
+.mid_box_create-title{
+  display: flex;
+  width: 20rem;
+  height: 4.8rem;
+  background-color: #B41515;
+  color: white;
+  border-top: 0.1rem solid white;
+  border-bottom: 0.1rem solid white;
+  font-size: 2.2rem;
+  font-weight: bold;
+  justify-content: center;
+  align-items: center;
+
+}
+.mid_box_input_title_box::placeholder{
+  font-size: 2rem;
+  color: rgba(10, 10, 10, 0.4);
+}
+
+.mid_box_input_title_box{
+  padding: 0rem 0rem 0rem 1rem;
+  height: 4.8rem;
+  width: 89rem;
+  border: none;
+  border-top: 0.1rem solid #B41515;
+  border-bottom: 0.1rem solid #B41515;
+  font-size: 2rem;
+}
+
+.mid_box_input_select{
+  position: absolute;
+  right: 0;
+  width: 10rem;
+  height: 4.8rem;
+  border-top: 0.1rem solid white;
+  border-bottom: 0.1rem solid white;
+  text-align-last: center;
+  background-color: #B41515;
+  color: white;
+  font-size: 2.2rem;
+  font-weight: bold;
+}
+
+.mid_box_select_option{
+  background-color: white;
+  color: black;
+}
+
+.mid_box_second_line{
+  display: flex;
+  position: relative;
+}
+
+.mid_box_input_filebox input[type="file"] {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip:rect(0,0,0,0);
+  border: 0;
+}
+
+.mid_box_upload-name {
+  display: inline-block;
+  padding: 0 0 0 1rem;
+  font-size: 2rem;
+  line-height: normal;
+  vertical-align: middle;
+  background-color: white;
+  border: none;
+  border-bottom-color: #e2e2e2;
+  border-radius: .25em;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  color: rgba(10, 10, 10, 0.4);
+  width: 80rem;
+}
+
+.mid_box_input_filebox label {
+  display: inline-block;
+  color: white;
+  font-size: 2rem;
+  font-weight: bold;
+  cursor: pointer;
+  border: 0.1rem solid #B41515;
+  color: #fff;
+  background-color: #B41515;
+  
+  width: 9.8rem;
+  height: 4.8rem;
+  position: absolute;
+  right: 0rem;
+  top: 0rem;
+  text-align: center;
+  line-height: 4.8rem;
+} 
+
+.mid_box_second_line_input{
+  display: flex;
+  width: 89.9rem;
+  border-right: 0.1rem solid #B41515;
+  border-bottom: 0.1rem solid #B41515;
+  align-items: center;
+}
+
+
+
+.mid_box_textarea{
+width: 1350px;
+height: 450px;
+border-bottom: 2px solid grey;
+}
+.mid_box_textarea_input{
+width: 1300px;
+height: 400px;
+border: none;
+outline: none;
+padding: 25px;
+font-size: 25px;
+resize:none;
+}
+
+.notice_create_upload{
+width: 300px;
+height: 57px;
+border: none;
+cursor: pointer;
+margin-left: 1240px;
+background-color: #B41515;
+font-size: 35px;
+font-weight: bold;
+text-align: center;
+color: white;
+margin-left: 480px;
+border-radius: 34px;
+padding-top: 8px;
+}
