--- a/notice/templates/notice/create.html
+++ b/notice/templates/notice/create.html
@@ -12,11 +12,17 @@
             <div class="aside_title">
                 <div class="aside_title_font">공지사항</div>
             </div>
-            <div class="aside_contents"><a href="notice_driver.html" class="aside_contents_link">기사님 공지사항</a></div>
-            <div class="aside_contents"><a href="notice_driver.html" class="aside_contents_link">사무실 공지사항</a></div>
-            <div class="aside_contents aside_contents_thispage"><a href="notice_driver.html"
-                    class="aside_contents_link">공지사항 작성</a></div>
-        </div>
+            <div class="aside_contents">
+                <a href="{% url 'notice:kinds' 'driver' %}" class="aside_contents_link">기사님 공지사항</a>
+            </div>
+            
+            <div class="aside_contents">
+                <a href="{% url 'notice:kinds' 'office' %}" class="aside_contents_link">사무실 공지사항</a>
+            </div>
+
+            <div class="aside_contents aside_contents_thispage">
+                <a href="{% url 'notice:create' %}" class="aside_contents_link">공지사항 작성</a>
+            </div>
     </aside>
 
     <section class="main_section">
@@ -26,57 +32,43 @@
             </div>
 
             <div class="mid_box">
-                <div class="mid_box_create-first_line">
-                    <div class="mid_box_create-title">제목</div>
-                    <input type="text" class="mid_box_input_title_box" placeholder="제목을 입력하세요">
-                    <select name="kinds" class="mid_box_input_select" required>
-                            <option value="" class="mid_box_select_option">종류</option>
-                            <option value="driver" class="mid_box_select_option">기사님</option>
-                            <option value="office" class="mid_box_select_option">사무실</option>
-                    </select>
-                </div>
-                <div class="mid_box_second_line">
-                    <div class="mid_box_create-title">첨부파일</div>
-                    <div class="mid_box_second_line_input">
-                        <div class="mid_box_input_filebox">
-                            <input class="mid_box_upload-name" value="파일을 선택하세요" disabled="disabled">
-                            <label for="mid_box_input_file">파일선택</label>
-                            <input type="file" id="mid_box_input_file" class="upload-hidden">
+                <form method="POST" action="{% url 'notice:create' %}" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="mid_box_create-first_line">
+                        <div class="mid_box_create-title">제목</div>
+                        <input type="text" name="title" required class="mid_box_input_title_box" placeholder="제목을 입력하세요">
+                        <select name="kinds" class="mid_box_input_select" required>
+                                <option value="" class="mid_box_select_option">종류</option>
+                                <option value="driver" class="mid_box_select_option">기사님</option>
+                                <option value="office" class="mid_box_select_option">사무실</option>
+                        </select>
+                    </div>
+                    <div class="mid_box_second_line">
+                        <div class="mid_box_create-title">첨부파일</div>
+                        <div class="mid_box_second_line_input">
+                            <div class="mid_box_input_filebox">
+                                <input class="mid_box_upload-name" value="파일을 선택하세요" disabled="disabled">
+                                <label for="mid_box_input_file">파일선택</label>
+                                <input type="file" name="file" id="mid_box_input_file" class="upload-hidden">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="mid_box_textarea">
-                    <textarea name="" id="" cols="30" rows="10" class="mid_box_textarea_input"
-                        placeholder="내용을 입력하세요"></textarea>
-                </div>
+                    <div class="mid_box_textarea">
+                        <textarea name="content" cols="30" rows="10" class="mid_box_textarea_input"
+                            placeholder="내용을 입력하세요" required></textarea>
+                    </div>
+                    <div class="mid_box_submit">
+                        <input type="submit" class="notice_create_upload" value="작성완료">
+                    </div>
+                </form>
             </div>
 
-            <div class="bottom_box">
-                <a href="notice_office.html" class="notice_create_upload">작성완료</a>
+            <div class="create_bottom_box">
             </div>
+
         </div>
     </section>
 </div>
-
-<form method="POST" action="{% url 'notice:create' %}" enctype="multipart/form-data">
-    {% csrf_token %}
-
-    <p>제목:</p>
-    <input type="text" name="title" required="required">
-    <p>내용:</p>
-    <textarea name="content"></textarea>
-    <p>종류:</p>
-    <label for="office">사무실</label>
-    <input type="radio" name="kinds" id="office" value="office" required="required">
-    <label for="driver">기사님</label>
-    <input type="radio" name="kinds" id="driver" value="driver" required="required">
-    <p>첨부파일</p>
-    <input type="file" name="file">
-    <input type="file" name="file">
-    <input type="file" name="file">
-    <br>
-    <input type="submit" value="등록">
-</form>
 {% endblock %}
 
 {% block script %}
