--- a/static/css/notice_create.css
+++ b/static/css/notice_create.css
@@ -16,7 +16,7 @@
   align-items: center;
 
 }
-.mid_box_input_title_box::placeholder{
+::placeholder{
   font-size: 2rem;
   color: rgba(10, 10, 10, 0.4);
 }
@@ -35,9 +35,10 @@
   position: absolute;
   right: 0;
   width: 10rem;
-  height: 4.8rem;
-  border-top: 0.1rem solid white;
+  height: 5rem;
+  border: 0.1rem solid #B41515;
   border-bottom: 0.1rem solid white;
+  border-top: 0.1rem solid white;
   text-align-last: center;
   background-color: #B41515;
   color: white;
@@ -57,8 +58,8 @@
 
 .mid_box_input_filebox input[type="file"] {
   position: absolute;
-  width: 1px;
-  height: 1px;
+  width: 0.1rem;
+  height: 0.1rem;
   padding: 0;
   overflow: hidden;
   clip:rect(0,0,0,0);
@@ -89,6 +90,8 @@
   font-weight: bold;
   cursor: pointer;
   border: 0.1rem solid #B41515;
+  border-bottom: 0.1rem solid white;
+  border-top: 0.1rem solid white;
   color: #fff;
   background-color: #B41515;
   
@@ -112,32 +115,41 @@
 
 
 .mid_box_textarea{
-width: 1350px;
-height: 450px;
-border-bottom: 2px solid grey;
+  width: 110rem;
 }
 .mid_box_textarea_input{
-width: 1300px;
-height: 400px;
-border: none;
-outline: none;
-padding: 25px;
-font-size: 25px;
-resize:none;
+  width: 104.8rem;
+  height: 40rem;
+  border: none;
+  outline: none;
+  padding: 2.5rem;
+  font-size: 2.5rem;
+  resize:none;
+  border: 0.1rem solid grey;
+  border-top: none;
+}
+
+.mid_box_submit{
+  width: 110rem;
+  position: relative;
 }
 
 .notice_create_upload{
-width: 300px;
-height: 57px;
-border: none;
-cursor: pointer;
-margin-left: 1240px;
-background-color: #B41515;
-font-size: 35px;
-font-weight: bold;
-text-align: center;
-color: white;
-margin-left: 480px;
-border-radius: 34px;
-padding-top: 8px;
+  width: 15rem;
+  height: 5rem;
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  background-color: #B41515;
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  color: white;
+  border-radius: 0.5rem;
+  margin-top: 0.5rem;
+}
+
+.create_bottom_box{
+  margin-top: 10rem;
+  height: 20rem;
 }
