--- a/notice/templates/notice/create.html
+++ b/notice/templates/notice/create.html
@@ -49,7 +49,7 @@
                             <div class="mid_box_input_filebox">
                                 <input class="mid_box_upload-name" value="파일을 선택하세요" disabled="disabled">
                                 <label for="mid_box_input_file">파일선택</label>
-                                <input type="file" name="file" id="mid_box_input_file" class="upload-hidden">
+                                <input type="file" name="file" id="mid_box_input_file" class="upload-hidden" multiple>
                             </div>
                         </div>
                     </div>
@@ -63,7 +63,7 @@
                 </form>
             </div>
 
-            <div class="create_bottom_box">
+            <div class="bottom_box">
             </div>
 
         </div>
