--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         </div>
         <div class="main_title"><a href="/" class="main_title_link">킹버스 ERP</a></div>
         <div class="basic_header_profile_form">
-          <span class="profile_form_word"><a class="profile_detail_link" href="profile">{{ name }}</a>님 반갑습니다!</span>
+          <span class="profile_form_word"><a class="profile_detail_link" href="profile">{{ logged_user.name }}</a>님 반갑습니다!</span>
         </div>
       </div>
       <div class="nav_form">
