--- a/notice/templates/notice/detail.html
+++ b/notice/templates/notice/detail.html
@@ -59,9 +59,7 @@
                     </div>
                 </div>
                 <div class="mid_box_textarea">
-                    <div class="mid_box_textarea_input">
-                        {{notice.content}}
-                    </div>
+                    <div class="mid_box_textarea_input">{{notice.content}}</div>
                 </div>
                 <div class="detail_edit_box">
                     {% if logged_user == notice.creator.id %}
