--- a/static/css/notice.css
+++ b/static/css/notice.css
@@ -1,6 +1,7 @@
 @import "notice_create.css";
 @import "notice_kinds.css";
 @import "notice_detail.css";
+@import "notice_edit.css";
 
 .top_box{
     display: flex;
