--- a/accounting/templates/accounting/outlay_list.html
+++ b/accounting/templates/accounting/outlay_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head %}
-    <link href="{% static 'css/outlay_list.css' %}" rel="stylesheet" type="text/css">
+<link href="{% static 'css/outlay_list.css' %}" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block content %}
@@ -28,21 +28,21 @@
     <aside>
         <div class="aside_box">
             <div class="aside_title">
-                <div class="aside_title_font">배차시스템</div>
+                <div class="aside_title_font">경리</div>
             </div>
-            <div id="aside_contents" class="aside_contents_thispage">
-                <a href="notice_driver.html"class="aside_contents_link">-배차지시서</a>
+            <div class="aside_contents">
+                <a href="notice_driver.html">수입관리</a>
             </div>
-            <div id="aside_contents">
-                <a href="notice_driver.html" class="aside_contents_link">-배차스케줄</a>
+            <div class="aside_contents">
+                <a href="notice_driver.html">지출관리</a>
             </div>
-            <div id="aside_contents">
-                <a href="notice_driver.html" class="aside_contents_link">-배차관리</a>
-        </div>
         </div>
     </aside>
 
     <section class="section">
+
+
+        
         <div class="accounting_outlay_page_title">지출관리</div>
         <div class="accounting_outlay_top_select">
             <form action="" class="accounting_outlay_search_form">
