--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 
         <div class="nav_box">
           <div class="nav_menu">
-            <span class="nav_menu-link">경리시스템</span>
+            <span class="nav_menu-link">경리</span>
           </div>
           <div class="sub_menu">
             <a href="{% url 'accounting:income_list' %}" class="sub_menu_link">수입관리</a>
@@ -45,7 +45,7 @@
 
         <div class="nav_box">
           <div class="nav_menu">
-            <span class="nav_menu-link">배차시스템</span>
+            <span class="nav_menu-link">배차</span>
           </div>
           <div class="sub_menu">
             <a href="{% url 'dispatch:dispatch_list' %}" class="sub_menu_link">배차지시서</a>
