--- a/static/css/basic_form.css
+++ b/static/css/basic_form.css
@@ -3,232 +3,9 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import "basic_init.css";
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-input:focus {
-    outline: none;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-html{
-  font-size: 62.5%;
-}
-body,th,td,input,select,textarea,button {
-  font-family: "Open Sans", sans-serif;
-  margin: 0rem;
-  font-size: 100%;
-}
-
-input{
-  font-family: "Open Sans", sans-serif;
-}
-
-a{
-  text-decoration: none;
-}
-
-.header_background{
-  background-color:#b41515;
-  padding-bottom: 1rem;
-  padding-top: 1rem;
-  margin-top: 0rem;
-
-}
-
-.header_head{
-  display: flex;
-  text-align: center;
-  align-items: flex-end;
-}
-
-.header_character{
-  margin-left: 16rem;
-}
-
-.kingkingyi{
-  width: 10rem;
-  height: 10rem;
-}
-.main_title{
-  display:flex;
-  text-align: center;
-  color: white;
-  margin-left: 3rem;
-  width: 40rem;
-  font-weight: bold;
-}
-.main_title_link{
-  font-size: 5rem;
-  color: white;
-}
-.basic_header_profile_form{
-  align-items: center;
-  position: absolute;
-  right: 0;
-  margin-right: 17rem;
-}
-.profile_detail_link{
-  font-size: 3rem;
-  color:white;
-}
-.profile_form_word{
-  font-size: 2rem;
-}
-
-.nav_form{
-  display: flex;
-  justify-content: center;
-  margin-top: 2rem;
-}
-
-.nav_menu{
-  width: 15rem;
-  background-color: white;
-  color: #b41515;
-  font-size: 2.3rem;
-  text-align: center;
-  border-right: 0.1rem solid#b41515;
-  padding: 0.5rem 0 0.5rem 0;
-}
-
-.nav_menu-link{
-  color:#b41515;
-}
-.sub_menu{
-  width: 15rem;
-  position: absolute;
-  display: none;
-  background-color: #f1f1f1;
-  box-shadow: 0rem 0.8rem 1.6rem 0rem rgba(0,0,0,0.2);
-  z-index: 1;
-}
-.sub_menu_link{
-  color: black;
-  display: block;
-  height: 3rem;
-  padding-top: 1rem;
-  text-align: center;
-}
-
-.nav_box:hover .sub_menu{
-display: block;
-}
-.sub_menu a:hover{
-  background-color: #ddd;
-}
-
-.main_box{
-  display: flex;
-}
-
-.aside_box{
-  margin-top: 15rem;
-  margin-left: 2rem;
-  width: 18.5rem;
-  height: 62rem;
-  border: 0.5rem solid#2d2d2d;
-  border-radius: 5rem 1rem
-}
-.aside_title{
-  width: 18.5rem;
-  height: 2rem;
-  margin-left: -0.5rem;
-  margin-top: -0.5rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  font-size: 2rem;
-  border: 0.5rem solid #2d2d2d;
-  border-radius: 5rem 1rem 0rem 0rem;
-  background-color:#2d2d2d;
-}
-.aside_title_font{
-  text-align: center;
-  color: white;
-}
-.aside_contents{
-  text-align: right;
-  margin: 1.5rem 1.5rem 0rem 0rem;
-  font-size: 1.7rem;
-}
-.aside_contents_link{
-  color: black;
-}
-
-.aside_contents_thispage{
-  font-weight: bold;
-}
-
-.pagination{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.4rem;
-}
-
-.page-link{
-  margin-right: 1rem;
-}
-
-.page-pre{
-  margin-right: 3rem;
-}
-
-.page-next{
-  margin-left: 3rem;
-}
-
-.page-activate{
-  font-weight: bold;
-}
-
-.main_section{
-  margin-top: 12rem;
-  margin-left: 7rem;
-}
+@import "basic_header.css";
+@import "basic_aside.css";
+@import "basic_pagination.css";
+@import "basic_main.css";
